tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_lib_flags_t_e.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - lib
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::analyzer::Analyzer
crate::discover::ModuleInfo
crate::discover::ModuleVisibility
crate::discover::TargetInfo
crate::discover::TargetKind
crate::error::AnalysisError
crate::graph::AnnotatedEdges
crate::graph::Cycle
crate::graph::DependencyGraph
crate::graph::DependencyGraphOptions
crate::graph::Edge
crate::graph::ShortestPaths
crate::model::AnalysisOptions
crate::model::AnalysisResult
crate::reference::GroupItem
crate::reference::PathPrefix
crate::reference::PathSuffix
crate::reference::TypeReference
crate::rules::CheckOptions
crate::rules::CheckReport
crate::rules::InitOutcome
crate::rules::Violation
crate::rules::ViolationKind

----- stderr -----
