tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_logger_flags_r_t_e_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - logger
    - "-r"
    - "-t"
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crate::cli::CrawkArgs
crate::logger::use_ansi_colors

----- stderr -----
