tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_logger_flags_r_t_e_g_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - logger
    - "-r"
    - "-t"
    - "-e"
    - "-g"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
logger
 - crate::cli::CrawkArgs

----- stderr -----
